feat: 대표직무 지정 기능 추가